...
        android:id="@+id/inputCommentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comentario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Dropdown para seleccionar usuario -->
    <com.google.android.material.textfield.TextInputLayout
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/selecciona_un_usuario">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/inputAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Hint para cuando no haya collectors -->
...
