...
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAddComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/agregar_comentario"
                android:textAllCaps="false"
...
