...
    <string name="validaci_n_fallida_campos_obligatorios_vac_os">❌ Validación fallida: Campos obligatorios vacíos</string>
    <string name="lbum_creado_desde_la_app_m_vil">Álbum creado desde la app móvil.</string>
    <string name="error_de_red_al_crear_el_lbum">Error de red al crear el álbum</string>
    <string name="_3_30_min">3:30 min</string>
    <string name="lbum_creado_pero_hubo_errores_al_agregar_contenido">Álbum creado, pero hubo errores al agregar contenido</string>
    <string name="lbum_y_contenido_creado_exitosamente">Álbum y contenido creado exitosamente</string>
    <string name="agregar">Agregar</string>
    <string name="cancelar">Cancelar</string>
    <string name="el_comentario_es_obligatorio">El comentario es obligatorio</string>
    <string name="an_nimo">Anónimo</string>
    <string name="artista_creado">Artista creado</string>
    <string name="error_al_crear_artista">Error al crear artista</string>
    <string name="nombre_obligatorio">Nombre obligatorio</string>
...
