<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- NestedScrollView para el contenido -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnCreateArtist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:hint="@string/fecha_de_nacimiento">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:hint="@string/descripci_n">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/image_upload_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_dotted_border"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/image_preview"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/imagen_de_referencia_para_indicar_que_se_puede_hacer_click_para_subir_una_imagen_de_artista"
                    android:src="@drawable/ic_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/toca_para_subir_foto_de_perfil"
                    android:textColor="?attr/colorOnSurface" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/png_jpg_hasta_5mb"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>

            <!-- Sección de agregar álbumes -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/lista_de_lbumes"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAlbums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:overScrollMode="never" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/agregar_lbum"
                android:textAllCaps="false"
                app:icon="@drawable/ic_add"
                app:iconGravity="textStart" />

            <!-- Sección de agregar premios -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/lista_de_premios"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPrizes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:overScrollMode="never" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_prize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="26dp"
                android:text="@string/agregar_premio"
                android:textAllCaps="false"
                app:icon="@drawable/ic_add"
                app:iconGravity="textStart" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Botón alineado a la parte inferior -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateArtist"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:backgroundTint="?attr/colorPrimary"
        android:padding="16dp"
        android:text="@string/crear_artista"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
