<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_album"
        android:title="@string/title_albums" />
    <item
        android:id="@+id/artistFragment"
        android:icon="@drawable/ic_artists"
        android:title="@string/title_artists" />
    <item
        android:id="@+id/collectorsFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_collectors" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>
